fix scrollbar

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
   font-family: Consolas, monospace;
   color: white;
   font-size: medium;
+  min-height: 100vh; /* Set a minimum height to ensure scrollability */
 }
 
 .content {
@@ -67,6 +68,8 @@ h2 {
 
 #media {
     text-align: center;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 .subtext {
@@ -112,3 +115,14 @@ h2 {
       color: red;
     }
 }
+
+
+ /* Hide scrollbar for Chrome, Safari and Opera */
+ body::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+html {  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */}
